--- a/06 Apps/Assignment02.BlazorWebApp/Shared/NavMenu.razor
+++ b/06 Apps/Assignment02.BlazorWebApp/Shared/NavMenu.razor
@@ -1,39 +1,82 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@using Assignment02.EntityProviders;
+@using Blazored.SessionStorage;
+@using Microsoft.AspNetCore.Http;
+
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">Assignment02.BlazorWebApp</a>
-        <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+        <a class="navbar-brand" >Book Store</a>
     </div>
 </div>
 
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="Author">
-                <span class="oi oi-plus" aria-hidden="true"></span> Author
-            </NavLink>
-        </div>
-@*        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </div>*@
+        @if (Role == string.Empty || Role == null) {
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                    <span class="oi oi-home" aria-hidden="true"></span>
+                    <label>Home</label>
+                </NavLink>
+            </div>
+        }
+        @if (Role == AppRole.Admin) {
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="Authors">
+                    <span class="oi-person" aria-hidden="true"></span> Authors
+                </NavLink>
+            </div>
+            
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="Books">
+                    <span class="oi-book" aria-hidden="true"></span> Books
+                </NavLink>
+            </div>
+            
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="Publishers">
+                    <span class="oi-print" aria-hidden="true"></span> Publishers
+                </NavLink>
+            </div>
+            
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="Users">
+                    <span class="oi-people" aria-hidden="true"></span> Users
+                </NavLink>
+            </div>
+            
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="Roles">
+                    <span class="oi-timer" aria-hidden="true"></span> Roles
+                </NavLink>
+            </div>
+            
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="Logout">
+                    <span class="oi-account-logout" aria-hidden="true"></span> Logout
+                </NavLink>
+            </div>
+        }
     </nav>
 </div>
 
 @code {
+    [Inject]
+    private ISessionStorageService SessionStorage { get; set; }
+
+    private string Role { get; set; }
+
     private bool collapseNavMenu = true;
 
     private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
 
-    private void ToggleNavMenu()
-    {
+    private void ToggleNavMenu() {
         collapseNavMenu = !collapseNavMenu;
+    }
+
+    protected override async Task OnInitializedAsync() {
+        try {
+            Role = await SessionStorage.GetItemAsStringAsync(AppRole.Role);
+        } catch {
+        }
+        StateHasChanged();
     }
 }
