fix member login

--- a/06 Apps/Assignment02.BlazorWebApp/Shared/NavMenu.razor
+++ b/06 Apps/Assignment02.BlazorWebApp/Shared/NavMenu.razor
@@ -21,37 +21,37 @@
         @if (Role == AppRole.Admin) {
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="Authors">
-                    <span class="oi-person" aria-hidden="true"></span> Authors
+                    <span class="oi oi-person" aria-hidden="true"></span> Authors
                 </NavLink>
             </div>
             
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="Books">
-                    <span class="oi-book" aria-hidden="true"></span> Books
+                    <span class="oi oi-book" aria-hidden="true"></span> Books
                 </NavLink>
             </div>
             
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="Publishers">
-                    <span class="oi-print" aria-hidden="true"></span> Publishers
+                    <span class="oi oi-print" aria-hidden="true"></span> Publishers
                 </NavLink>
             </div>
             
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="Users">
-                    <span class="oi-people" aria-hidden="true"></span> Users
+                    <span class="oi oi-people" aria-hidden="true"></span> Users
                 </NavLink>
             </div>
             
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="Roles">
-                    <span class="oi-timer" aria-hidden="true"></span> Roles
+                    <span class="oi oi-timer" aria-hidden="true"></span> Roles
                 </NavLink>
             </div>
             
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="Logout">
-                    <span class="oi-account-logout" aria-hidden="true"></span> Logout
+                    <span class="oi oi-account-logout" aria-hidden="true"></span> Logout
                 </NavLink>
             </div>
         }
