--- a/06 Apps/Assignment02.BlazorWebApp/Pages/_Layout.cshtml
+++ b/06 Apps/Assignment02.BlazorWebApp/Pages/_Layout.cshtml
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="Assignment02.BlazorWebApp.styles.css" rel="stylesheet" />
+    <link href="_content/Microsoft.Fast.Components.FluentUI/css/variables.css" rel="stylesheet" />
+    <link href="_content/Microsoft.Fast.Components.FluentUI/css/reboot.css" rel="stylesheet" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
@@ -28,5 +30,6 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
+    <script type="module" src="https://cdn.jsdelivr.net/npm/@@fluentui/web-components@2.0.2/dist/web-components.min.js"></script>
 </body>
 </html>
