--- a/06 Apps/Assignment02.BlazorWebApp/Pages/_Layout.cshtml
+++ b/06 Apps/Assignment02.BlazorWebApp/Pages/_Layout.cshtml
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="Assignment02.BlazorWebApp.styles.css" rel="stylesheet" />
-    <link href="_content/Microsoft.Fast.Components.FluentUI/css/variables.css" rel="stylesheet" />
-    <link href="_content/Microsoft.Fast.Components.FluentUI/css/reboot.css" rel="stylesheet" />
+    <link href="_content/Syncfusion.Blazor.Themes/bootstrap5.css" rel="stylesheet" />
+    <script src="_content/Syncfusion.Blazor/scripts/syncfusion-blazor.min.js" type="text/javascript"></script>
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
@@ -30,6 +30,5 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
-    <script type="module" src="https://cdn.jsdelivr.net/npm/@@fluentui/web-components@2.0.2/dist/web-components.min.js"></script>
 </body>
 </html>
