--- a/06 Apps/Assignment02.BlazorWebApp/Shared/NavMenu.razor
+++ b/06 Apps/Assignment02.BlazorWebApp/Shared/NavMenu.razor
@@ -8,7 +8,7 @@
     </div>
 </div>
 
-<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
+<div >
     <nav class="flex-column">
         @if (Role == string.Empty || Role == null) {
             <div class="nav-item px-3">
@@ -20,31 +20,31 @@
         }
         @if (Role == AppRole.Admin) {
             <div class="nav-item px-3">
-                <NavLink class="nav-link" href="Authors">
+                <NavLink class="nav-link" href="Admin/Authors">
                     <span class="oi oi-person" aria-hidden="true"></span> Authors
                 </NavLink>
             </div>
             
             <div class="nav-item px-3">
-                <NavLink class="nav-link" href="Books">
+                <NavLink class="nav-link" href="Admin/Books">
                     <span class="oi oi-book" aria-hidden="true"></span> Books
                 </NavLink>
             </div>
             
             <div class="nav-item px-3">
-                <NavLink class="nav-link" href="Publishers">
+                <NavLink class="nav-link" href="Admin/Publishers">
                     <span class="oi oi-print" aria-hidden="true"></span> Publishers
                 </NavLink>
             </div>
             
             <div class="nav-item px-3">
-                <NavLink class="nav-link" href="Users">
+                <NavLink class="nav-link" href="Admin/Users">
                     <span class="oi oi-people" aria-hidden="true"></span> Users
                 </NavLink>
             </div>
             
             <div class="nav-item px-3">
-                <NavLink class="nav-link" href="Roles">
+                <NavLink class="nav-link" href="Admin/Roles">
                     <span class="oi oi-timer" aria-hidden="true"></span> Roles
                 </NavLink>
             </div>
@@ -63,14 +63,6 @@
     private ISessionStorageService SessionStorage { get; set; }
 
     private string Role { get; set; }
-
-    private bool collapseNavMenu = true;
-
-    private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
-
-    private void ToggleNavMenu() {
-        collapseNavMenu = !collapseNavMenu;
-    }
 
     protected override async Task OnInitializedAsync() {
         try {
