--- a/06 Apps/Assignment02.BlazorWebApp/Shared/NavMenu.razor
+++ b/06 Apps/Assignment02.BlazorWebApp/Shared/NavMenu.razor
@@ -50,6 +50,12 @@
             </div>
             
             <div class="nav-item px-3">
+                <NavLink class="nav-link" href="About">
+                    <span class="oi oi-info" aria-hidden="true"></span> About
+                </NavLink>
+            </div>
+            
+            <div class="nav-item px-3">
                 <NavLink class="nav-link" href="Logout">
                     <span class="oi oi-account-logout" aria-hidden="true"></span> Logout
                 </NavLink>
