--- a/06 Apps/Assignment02.BlazorWebApp/Pages/_Layout.cshtml
+++ b/06 Apps/Assignment02.BlazorWebApp/Pages/_Layout.cshtml
@@ -13,6 +13,7 @@
     <link href="Assignment02.BlazorWebApp.styles.css" rel="stylesheet" />
     <link href="_content/Syncfusion.Blazor/styles/bootstrap5.css" rel="stylesheet" />
     <script src="_content/Syncfusion.Blazor/scripts/syncfusion-blazor.min.js" type="text/javascript"></script>
+    @*<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">*@
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
@@ -28,7 +29,7 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <script src="_framework/blazor.server.js"></script>
 </body>
 </html>
