--- a/06 Apps/Assignment02.BlazorWebApp/wwwroot/css/site.css
+++ b/06 Apps/Assignment02.BlazorWebApp/wwwroot/css/site.css
@@ -62,3 +62,7 @@ a, .btn-link {
     .blazor-error-boundary::after {
         content: "An error has occurred."
     }
+.example-label {
+    font-size: 14px;
+    margin-bottom: 6px;
+}
