added publisher new page

--- a/06 Apps/Assignment02.BlazorWebApp/Pages/Admin/Publisher/PublisherDetailPage.razor
+++ b/06 Apps/Assignment02.BlazorWebApp/Pages/Admin/Publisher/PublisherDetailPage.razor
@@ -19,7 +19,7 @@
                 Email Address:
             </dt>
             <dd class="col-sm-4">
-                <SfTextBox Type="InputType.Email" @bind-Value=@Publisher.Name CssClass="e-small" Width="100"></SfTextBox>
+                <SfTextBox Type="InputType.Text" @bind-Value=@Publisher.Name CssClass="e-small" Width="100"></SfTextBox>
             </dd>
 
             <dt class="col-sm-2">
@@ -44,7 +44,7 @@
             </dd>
 
             <dt class="col-sm-2">
-                State :
+                Country :
             </dt>
             <dd class="col-sm-4">
                 <SfTextBox Type="InputType.Text" @bind-Value=@Publisher.Country CssClass="e-small" Width="100"></SfTextBox>
