--- a/06 Apps/Assignment02.BlazorWebApp/Pages/Admin/Publisher/PublisherListPage.razor
+++ b/06 Apps/Assignment02.BlazorWebApp/Pages/Admin/Publisher/PublisherListPage.razor
@@ -12,6 +12,7 @@
 {
     <p><em>Loading...</em></p>
 } else {
+    <SfButton CssClass="e-inherit" IconCss="e-icons e-plus" OnClick="() => AddNew()">Add New Publisher</SfButton>
     <SfGrid DataSource="@PubliserIEnumerable" AllowPaging=true AllowSelection="true" AllowSorting="true" AllowFiltering="true" Height="600">
         <GridPageSettings PageCount="5" PageSizes="true"></GridPageSettings>
         <GridColumns>
